--- a/.config/swaync/style.css
+++ b/.config/swaync/style.css
@@ -10,6 +10,7 @@
     font-family: "JetBrains Mono Nerd Font", monospace;
     font-weight: bold;
     font-size: 14px;
+    box-shadow: none;
 }
 
 /* Notifications */
@@ -26,16 +27,16 @@
 .notification-content {
     background: @transparency;
     padding: 12px;
-    border-radius: 12px;
+    border-radius: 12px 12px 0px 0px;
     border: 2px solid @highlight;
-    margin: 0;
 }
 
 .notification-action {
     border: 2px solid @highlight;
     border-top: none;
-    border-radius: 0px;
-    background: #32302F;
+    background: #32302f;
+    margin: 0;
+    padding: 0;
 }
 
 .close-button {
@@ -43,13 +44,13 @@
     color: @dark-bg;
     text-shadow: none;
     padding: 0;
-    border-radius: 0px;
+    border-radius: 12px;
 }
 
 .close-button:hover {
     box-shadow: none;
     background: @highlight;
-    transition: all .15s ease-in-out;
+    transition: all 0.15s ease-in-out;
     border: none;
 }
 
@@ -65,7 +66,7 @@
 }
 
 .control-center-list-placeholder {
-    opacity: .5;
+    opacity: 0.5;
 }
 
 /* Widgets */
@@ -77,7 +78,7 @@
     border-radius: 5px;
 }
 
-.widget-title>button {
+.widget-title > button {
     font-size: 1rem;
     text-shadow: none;
     background: @transparency;
@@ -85,7 +86,7 @@
     border-radius: 5px;
 }
 
-.widget-title>button:hover {
+.widget-title > button:hover {
     background: @highlight;
     color: black;
 }
@@ -98,18 +99,18 @@
     font-size: large;
 }
 
-.widget-dnd>switch {
+.widget-dnd > switch {
     border-radius: 4px;
     background: @light-bg;
 }
 
-.widget-dnd>switch:checked {
+.widget-dnd > switch:checked {
     background: @highlight;
     border: 1px solid @highlight;
 }
 
-.widget-dnd>switch slider,
-.widget-dnd>switch:checked slider {
+.widget-dnd > switch slider,
+.widget-dnd > switch:checked slider {
     background: @dark-bg;
     border-radius: 5px;
 }
@@ -118,6 +119,6 @@
     margin: 10px 10px 5px 10px;
 }
 
-.widget-label>label {
+.widget-label > label {
     font-size: 1rem;
 }
